<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Splash Bubble</string>
    <string name="action_settings">Options</string>
    <string name="play">Jouer</string>
    <string name="highScores">Meilleurs scores</string>
    <string name="quit">Quitter</string>
    <string name="highScoresInfinite">highScoresInfinite</string>
    <string name="score">Score : </string>
    <string name="bonus">Bonus : </string>
    <string name="combo">Combo : </string>
    <string name="default_score">0</string>
    <string name="none">Aucune</string>
    <string name="back">Retour</string>
    <string name="version_name">1.2.6-beta</string>
    <string name="action_resume">Reprendre</string>
    <string name="action_play_pause">Jouer/Pause</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_game_play">GamePlayActivity</string>
    <string name="game_play">Mode de jeu</string>
    <string name="infinite_mode">Mode infini</string>
    <string name="title_activity_high_scores_game_play">HighScoresGamePlayActivity</string>
    <string name="classic_mode">Mode classique</string>
    <string name="highScoresClassic">highScoresClassic</string>

</resources>