<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_ui"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/score"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/text_score"
            android:layout_below="@+id/text_score"
            android:text="@string/default_score"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/action_play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/action_play_pause"
            android:src="@android:drawable/ic_media_pause" />

        <TextView
            android:id="@+id/text_bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/text_score"
            android:text="@string/bonus"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bonus_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/text_bonus"
            android:layout_below="@+id/text_bonus"
            android:text="@string/default_score"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_last_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/text_bonus"
            android:text="@string/combo"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/last_color_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/bonus_value"
            android:layout_alignBottom="@+id/bonus_value"
            android:layout_alignRight="@+id/text_last_color"
            android:text="@string/none"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/game_view_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >
        
    </RelativeLayout>

</LinearLayout>